--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "sass-loader": "^6.0.6",
     "serve-static": "^1.13.2",
     "vue": "^2.5.2",
+    "vue-browser-geolocation": "0.0.1",
     "vue-chartkick": "^0.2.1",
     "vue-google-autocomplete": "^1.0.14",
     "vuex": "^3.0.1"
